# dnf_ui

./: .clang-format  .clang-format-docker.conf  .gitignore  .markdownlint.json  Dockerfile  LICENSE  Makefile  NOTES.txt  README.md  dnf-ui.spec  docker_build.sh  docker_setup.sh  dump.sh  main.cpp  meson.build  meson_options.txt
.github/workflows/: ci.yml  release-rpm.yml
docker/: Dockerfile  container_runtime.sh  docker_build.sh  docker_gui_service_run_inner.sh  docker_offline_test.sh  docker_rpm_build.sh  docker_run.sh  docker_service_apply_test.sh  docker_service_cancel_test.sh  docker_service_preview_failure_test.sh  docker_service_system_bus_apply_test.sh  docker_service_system_bus_disconnect_test.sh  docker_service_system_bus_inner.sh  docker_service_system_bus_test.sh  docker_service_test.sh  docker_setup.sh  docker_test.sh  run_docker_tests.sh
docs/: api-assumptions.md  architecture.md  backend.md  testing.md  transactions.md  ui.md
files/: NOTES.txt
hooks/: pre-commit
packaging/: build_rpm.sh  build_srpm.sh  com.fedora.Dnfui.Transaction1.conf  com.fedora.Dnfui.Transaction1.service  com.fedora.dnfui.desktop  com.fedora.dnfui.metainfo.xml  com.fedora.dnfui.metainfo.xml.in  com.fedora.dnfui.policy  com.fedora.dnfui.transaction.service  dnfui-service.service  meson.build
po/: LINGUAS  POTFILES.in  meson.build
src/: app.cpp  app.hpp  base_manager.cpp  base_manager.hpp  config.cpp  config.hpp  debug_trace.hpp  dnf_backend.cpp  dnf_backend.hpp  i18n.cpp  i18n.hpp  main.cpp  meson.build  package_info_controller.cpp  package_info_controller.hpp  package_query_controller.cpp  package_table_view.cpp  pending_transaction_controller.cpp  style.css  transaction_progress.cpp  transaction_progress.hpp  transaction_request.hpp  transaction_service_client.cpp  transaction_service_client.hpp  ui_helpers.cpp  ui_helpers.hpp  widgets.cpp  widgets.hpp  widgets_internal.hpp
src/dnf_backend/: dnf_backend.hpp  dnf_common.cpp  dnf_details.cpp  dnf_groups.cpp  dnf_internal.hpp  dnf_query.cpp  dnf_state.cpp  dnf_transaction.cpp
src/service/: meson.build  transaction_service.cpp  transaction_service.hpp  transaction_service_dbus.hpp  transaction_service_introspection.cpp  transaction_service_introspection.hpp  transaction_service_main.cpp  transaction_service_preview_formatter.cpp  transaction_service_preview_formatter.hpp  transaction_service_request_parser.cpp  transaction_service_request_parser.hpp
src/ui/: main_menu.cpp  main_menu.hpp  main_window.cpp  main_window.hpp  package_info_controller.cpp  package_info_controller.hpp  package_query_cache.cpp  package_query_cache.hpp  package_query_controller.cpp  package_query_controller.hpp  package_query_state.hpp  package_table_context_menu.cpp  package_table_context_menu.hpp  package_table_status.cpp  package_table_status.hpp  package_table_view.cpp  package_table_view.hpp  pending_transaction_controller.cpp  pending_transaction_controller.hpp  pending_transaction_request.cpp  pending_transaction_request.hpp  pending_transaction_state.hpp  transaction_progress.cpp  transaction_progress.hpp  ui_helpers.cpp  ui_helpers.hpp  widgets.cpp  widgets.hpp  widgets_internal.hpp
test/: meson.build  test_backend.cpp  test_offline.cpp  test_search.cpp  test_transaction_preview.cpp  test_transaction_request.cpp  test_transaction_service_client.cpp  test_utils.hpp
test/functional/: test_transaction_service_apply.sh  test_transaction_service_cancel.sh  test_transaction_service_preview.sh  test_transaction_service_preview_failure.sh  test_transaction_service_system_bus.sh
test/unit/: test_backend.cpp  test_groups.cpp  test_offline.cpp  test_package_query_cache.cpp  test_pending_transaction_request.cpp  test_search.cpp  test_transaction_preview.cpp  test_transaction_request.cpp  test_transaction_service_client.cpp  test_transaction_service_preview_formatter.cpp
utils/: docker-clang-format.sh  install_transaction_service.sh  meson_build.sh  run_memcheck.sh  run_native_tests.sh  test_transaction_service_apply.sh  test_transaction_service_cancel.sh  test_transaction_service_poc.sh  test_transaction_service_preview.sh  test_transaction_service_preview_failure.sh  test_transaction_service_system_bus.sh  transaction_service_paths.conf  uninstall_transaction_service.sh  valgrind-dnfui.supp
