install_data(
  'com.fedora.dnfui.policy',
  install_dir: polkit_action_dir,
  install_tag: 'transaction-service',
)

install_data(
  'com.fedora.Dnfui.Transaction1.service',
  install_dir: dbus_system_service_dir,
  install_tag: 'transaction-service',
)

install_data(
  'com.fedora.Dnfui.Transaction1.conf',
  install_dir: dbus_system_policy_dir,
  install_tag: 'transaction-service',
)

install_data(
  'com.fedora.dnfui.transaction.service',
  install_dir: systemd_system_unit_dir,
  install_tag: 'transaction-service',
)
