install_data(
  'com.fedora.dnfui.policy',
  install_dir: polkit_action_dir,
  install_tag: 'transaction-service',
)

install_data(
  'com.fedora.dnfui.desktop',
  install_dir: desktop_file_dir,
  install_tag: 'runtime',
)

install_data(
  'com.fedora.dnfui.metainfo.xml',
  install_dir: metainfo_dir,
  install_tag: 'runtime',
)

install_data(
  'com.fedora.Dnfui.Transaction1.service',
  install_dir: dbus_system_service_dir,
  install_tag: 'transaction-service',
)

install_data(
  'com.fedora.Dnfui.Transaction1.conf',
  install_dir: dbus_system_policy_dir,
  install_tag: 'transaction-service',
)

install_data(
  'com.fedora.dnfui.transaction.service',
  install_dir: systemd_system_unit_dir,
  install_tag: 'transaction-service',
)

install_data(
  '../img/logo.png',
  install_dir: app_icon_dir,
  rename: 'com.fedora.dnfui.png',
  install_tag: 'runtime',
)
