i18n = import('i18n')

i18n.gettext(
  meson.project_name(),
  preset: 'glib',
  args: [
    '--keyword=dnfui_i18n_format:1',
    '--keyword=dnfui_i18n_format_count:2,3',
    '--flag=dnfui_i18n_format:1:c-format',
    '--flag=dnfui_i18n_format_count:2:c-format',
    '--flag=dnfui_i18n_format_count:3:c-format',
  ],
)
